--- a/cybershuttle.yml
+++ b/cybershuttle.yml
@@ -19,10 +19,7 @@ workspace:
     min_gpu: 0
     min_mem: 4096
     gpu_mem: 1024
-  model_collection:
-    - source: cybershuttle
-      identifier: cybershuttle-reference
-      mount_point: /cybershuttle_data/cybershuttle-reference
+  model_collection: []
   data_collection: []
 
 additional_dependencies:
