--- a/cybershuttle.yml
+++ b/cybershuttle.yml
@@ -1,7 +1,7 @@
 project:
   name: "SAT-2 English Text Classifier"
   description: "Classification of English text related to SAT-2 content using a fine-tuned DistilBERT model"
-  homepage: https://github.com/vdamineni/VIPAImodelexecution
+  homepage: https://github.com/vdamineni/VIPAImodelexecution.git
   authors:
     - vdamineni3@gatech.edu
     - asherman39@gatech.edu
