--- a/cybershuttle.yml
+++ b/cybershuttle.yml
@@ -1,5 +1,5 @@
 project:
-  name: "SAT-2 English Text Classifier"
+  name: "SAT2 English Text Classifier"
   description: "Classification of English text related to SAT-2 content using a fine-tuned DistilBERT model"
   homepage: "https://github.com/vdamineni/VIPAImodelexecution.git"
   authors:
