--- a/cybershuttle.yml
+++ b/cybershuttle.yml
@@ -1,29 +1,36 @@
 project:
-  name: "Getting started with Cybershuttle"
-  description: "Run a simulation and understand the minimum macros required to run Cybershuttle"
-  homepage: https://github.com/cyber-shuttle/cybershuttle-reference
+  name: "SAT-2 English Text Classifier"
+  description: "Classification of English text related to SAT-2 content using a fine-tuned DistilBERT model"
+  homepage: "https://github.com/vdamineni/VIPAImodelexecution"
   authors:
-    - smarru@gatech.edu
+    - vdamineni3@gatech.edu
+    - asherman39@gatech.edu
+    - mkim836@gatech.edu
+    - krishr@gatech.edu
   tags:
     - cybershuttle
-    - apache-airavata
-    - reference
+    - airavata-courses
 
 workspace:
   location: /workspace
   resources:
     min_cpu: 4
     min_gpu: 0
-    min_mem: 0
+    min_mem: 4096
     gpu_mem: 1024
-  model_collection:
-    - source: cybershuttle
-      identifier: cybershuttle-reference
-      mount_point: /cybershuttle_data/cybershuttle-reference
-  data_collection: []
+
+model_collection:
+  - name: "distilbert-base-uncased"
+    source: "huggingface"
+
+data_collection: []
 
 additional_dependencies:
   conda:
     - python=3.10
     - pip
-  pip: []
+  pip:
+    - streamlit
+    - transformers
+    - torch
+    - matplotlib
