--- a/cybershuttle.yml
+++ b/cybershuttle.yml
@@ -16,12 +16,8 @@ workspace:
     min_gpu: 0
     min_mem: 4096
     gpu_mem: 1024
-
-model_collection:
-  - name: "distilbert-base-uncased"
-    source: "huggingface"
-
-data_collection: []
+  model_collection: []
+  data_collection: []
 
 additional_dependencies:
   conda:
