--- a/cybershuttle.yml
+++ b/cybershuttle.yml
@@ -5,6 +5,8 @@ project:
   authors:
     - asherman39@gatech.edu
     - krishr@gatech.edu
+    - mkim836@gatech.edu
+    - vdamineni3@gatech.edu
   tags:
     - cybershuttle
     - airavata-courses
